Embedded web view of electronic brands

--- a/SmartShopper/Base.lproj/Main.storyboard
+++ b/SmartShopper/Base.lproj/Main.storyboard
@@ -337,6 +337,13 @@
                                     <segue destination="aO3-iE-zoJ" kind="show" id="Xqf-dB-BVt"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAj-ZF-UFr">
+                                <rect key="frame" x="35" y="381" width="122" height="93"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <segue destination="QFQ-o5-cx2" kind="show" id="r5F-6l-AKM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="fDH-E9-9OV"/>
@@ -384,6 +391,54 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iga-sf-ymj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4530.3999999999996" y="613.04347826086962"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="wJB-It-Sso">
+            <objects>
+                <tableViewController id="QFQ-o5-cx2" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="66A-3H-Vyd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="electronic" id="9Yj-5r-gC2">
+                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9Yj-5r-gC2" id="al8-Ho-dpS">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="8RD-fn-m83" kind="show" id="sg8-89-X0N"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="QFQ-o5-cx2" id="NV9-cn-8Rz"/>
+                            <outlet property="delegate" destination="QFQ-o5-cx2" id="V8a-mD-eYn"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="gBH-r9-kz7"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TjE-cM-kc0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2804" y="1432"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ldm-kQ-3GE">
+            <objects>
+                <viewController id="8RD-fn-m83" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SIc-n7-7WF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="QPz-hE-Pwo"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="7wT-79-fx1"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6ph-5l-nms" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3636" y="1432"/>
         </scene>
         <!--Footwear Table View Controller-->
         <scene sceneID="qp5-MK-S8n">
